@@ -50,23 +50,23 @@ perl5-swig: swig-clean
 python-swig: swig-clean
 	swig -c++ -python @INCLUDE_FLAGS@ -I$(top_srcdir)/inc -o wrapper.cpp swig.i	
 	LDFLAGS="@LDFLAGS@ @UCOMMON_CLINK@" CFLAGS="@SIPWITCH_FLAGS@ -I$(abs_top_srcdir)/inc -I$(abs_top_srcdir)" python setup.py build_ext --inplace --swig-opts=-c++ -lucommon
-	$(mkinstalldirs) $(DESTDIR)`python -c 'from distutils.sysconfig import get_python_lib; print get_python_lib()'`
-	$(mkinstalldirs) $(DESTDIR)`python -c 'from distutils.sysconfig import get_python_lib; print get_python_lib(1)'`
-	$(INSTALL_DATA) sipwitch.py $(DESTDIR)`python -c 'from distutils.sysconfig import get_python_lib; print get_python_lib()'`
-	$(INSTALL) _sipwitch.so $(DESTDIR)`python -c 'from distutils.sysconfig import get_python_lib; print get_python_lib(1)'`
+	$(mkinstalldirs) $(DESTDIR)/$(PYTHON_SITELIB)
+	$(mkinstalldirs) $(DESTDIR)/$(PYTHON_SITEARCH)
+	$(INSTALL_DATA) sipwitch.py $(DESTDIR)/$(PYTHON_SITELIB)
+	$(INSTALL) _sipwitch.so $(DESTDIR)/$(PYTHON_SITEARCH)
 
 php5-swig: swig-clean
 	swig -c++ -php5 @INCLUDE_FLAGS@ -I$(top_srcdir)/inc -o wrapper.cpp swig.i
-	$(CXX) -shared `php-config --includes` -Wno-format -fpic @SIPWITCH_FLAGS@ -o wrapper.o -c wrapper.cpp -I$(top_srcdir)/inc -I$(top_srcdir) 
+	$(CXX) -shared `$(PHP_CONFIG) --includes` -Wno-format -fpic @SIPWITCH_FLAGS@ -o wrapper.o -c wrapper.cpp -I$(top_srcdir)/inc -I$(top_srcdir) 
 	$(CXX) -shared -module $(MODFLAGS) -o sipwitch.so wrapper.o -lucommon @UCOMMON_CLINK@
-	$(mkinstalldirs) $(DESTDIR)`php-config --extension-dir`
-	$(INSTALL) sipwitch.so $(DESTDIR)`php-config --extension-dir`
+	$(mkinstalldirs) $(DESTDIR)/$(PHP_EXTDIR)
+	$(INSTALL) sipwitch.so $(DESTDIR)/$(PHP_EXTDIR)
 
 # my internal use testing targets...
 
 php5-test: swig-clean
 	swig -c++ -php5 @INCLUDE_FLAGS@ -I$(top_srcdir)/inc -o wrapper.cpp swig.i
-	$(CXX) `php-config --includes` -Wno-format -fpic @SIPWITCH_FLAGS@ -o wrapper.o -c wrapper.cpp -I$(top_srcdir)/inc -I$(top_srcdir) 
+	$(CXX) `$(PHP_CONFIG) --includes` -Wno-format -fpic @SIPWITCH_FLAGS@ -o wrapper.o -c wrapper.cpp -I$(top_srcdir)/inc -I$(top_srcdir) 
 	$(CXX) -shared -module $(MODFLAGS) -o sipwitch.so wrapper.o -L../../ucommon/src/.libs -lucommon @UCOMMON_CLINK@
 
 python-test: swig-clean
